oox/source/vml/vmlshape.cxx
@@ -1036,14 +1036,27 @@ PolyLineShape::PolyLineShape( Drawing& rDrawing ) :
 
 Reference< XShape > PolyLineShape::implConvertAndInsert( const Reference< XShapes >& rxShapes, const awt::Rectangle& rShapeRect ) const
 {
-    Reference< XShape > xShape = SimpleShape::implConvertAndInsert( rxShapes, rShapeRect );
-    // polygon path
+    ::std::vector<awt::Point> aAbsPoints;
     awt::Rectangle aCoordSys = getCoordSystem();
-    if( !maShapeModel.maPoints.empty() && (aCoordSys.Width > 0) && (aCoordSys.Height > 0) )
+    if (!maShapeModel.maPoints.empty() && (aCoordSys.Width > 0) && (aCoordSys.Height > 0))
     {
-        ::std::vector< awt::Point > aAbsPoints;
         for (auto const& point : maShapeModel.maPoints)
-            aAbsPoints.push_back( lclGetAbsPoint( point, rShapeRect, aCoordSys ) );
+            aAbsPoints.push_back(lclGetAbsPoint(point, rShapeRect, aCoordSys));
+        // A polyline cannot be filled but only a polygon. We treat first point == last point as
+        // indicator for being closed. In that case we force to type PolyPolygonShape.
+        if (aAbsPoints.size() > 2 && aAbsPoints.front().X == aAbsPoints.back().X
+            && aAbsPoints.front().Y == aAbsPoints.back().Y)
+        {
+            const_cast<PolyLineShape*>(this)->setService("com.sun.star.drawing.PolyPolygonShape");
+        }
+    }
+
+    Reference<XShape> xShape = SimpleShape::implConvertAndInsert(rxShapes, rShapeRect);
+
+    // polygon path
+
+    if (!aAbsPoints.empty())
+    {
         PointSequenceSequence aPointSeq( 1 );
         aPointSeq[ 0 ] = ContainerHelper::vectorToSequence( aAbsPoints );
         PropertySet aPropSet( xShape );
